@@ -24,6 +24,7 @@
 */
 #include <string.h>
 #include <math.h>
+#include <errno.h>
 
 #include "rsvg-private.h"
 #include "rsvg-styles.h"
@@ -1042,6 +1043,136 @@ rsvg_start_ellipse (RsvgHandle *ctx, RsvgPropertyBag *atts)
 	g_string_free (d, TRUE);
 }
 
+static void
+size_prepared_cb (GdkPixbufLoader *loader, 
+				  int              width,
+				  int              height,
+				  gpointer         data)
+{
+	struct {
+		int width;
+		int height;
+		gboolean keep_aspect_ratio;
+	} *info = data;
+	
+	if (info->keep_aspect_ratio) {
+		if (width < 0)
+	    width = 500;
+		if (height < 0)
+			height = 500;
+		
+		if ((double)height * (double)info->width >
+			(double)width * (double)info->height) {
+			width = 0.5 + (double)width * (double)info->height / (double)height;
+			height = info->height;
+		} else {
+			height = 0.5 + (double)height * (double)info->width / (double)width;
+			width = info->width;
+		}
+	} else {
+		width = info->width;
+		height = info->height;
+	}
+	
+	gdk_pixbuf_loader_set_size (loader, width, height);
+}
+
+/**
+ * rsvg_pixbuf_new_from_file_at_size:
+ * @filename: Name of file to load.
+ * @width: The width the image should have
+ * @height: The height the image should have
+ * @error: Return location for an error
+ *
+ * Creates a new pixbuf by loading an image from a file.  The file format is
+ * detected automatically. If %NULL is returned, then @error will be set.
+ * Possible errors are in the #GDK_PIXBUF_ERROR and #G_FILE_ERROR domains.
+ * The image will be scaled to fit in the requested size, preserving its aspect ratio.
+ *
+ * Return value: A newly-created pixbuf with a reference count of 1, or %NULL if
+ * any of several error conditions occurred:  the file could not be opened,
+ * there was no loader for the file's format, there was not enough memory to
+ * allocate the image buffer, or the image file contained invalid data.
+ *
+ * Since: 2.4
+ **/
+static GdkPixbuf *
+rsvg_pixbuf_new_from_file_at_size (const char *filename,
+								   int         width, 
+								   int         height,
+								   gboolean    keep_aspect_ratio,
+								   GError    **error)
+{
+	GdkPixbufLoader *loader;
+	GdkPixbuf       *pixbuf;
+	
+	guchar buffer [4096];
+	int length;
+	FILE *f;
+	struct {
+		gint width;
+		gint height;
+		gboolean keep_aspect_ratio;
+	} info;
+	
+	g_return_val_if_fail (filename != NULL, NULL);
+	g_return_val_if_fail (width > 0 && height > 0, NULL);
+	
+	f = fopen (filename, "rb");
+	if (!f) {
+		g_set_error (error,
+					 G_FILE_ERROR,
+					 g_file_error_from_errno (errno),
+					 "Failed to open file '%s': %s",
+					 filename, g_strerror (errno));
+		return NULL;
+	}
+	
+	loader = gdk_pixbuf_loader_new ();
+	
+	info.width = width;
+	info.height = height;
+	info.keep_aspect_ratio = keep_aspect_ratio;
+	
+	g_signal_connect (loader, "size-prepared", G_CALLBACK (size_prepared_cb), &info);
+	
+	while (!feof (f)) {
+		length = fread (buffer, 1, sizeof (buffer), f);
+		if (length > 0)
+			if (!gdk_pixbuf_loader_write (loader, buffer, length, error)) {
+				gdk_pixbuf_loader_close (loader, NULL);
+				fclose (f);
+				g_object_unref (loader);
+				return NULL;
+			}
+	}
+	
+	fclose (f);
+	
+	if (!gdk_pixbuf_loader_close (loader, error)) {
+		g_object_unref (loader);
+		return NULL;
+	}
+	
+	pixbuf = gdk_pixbuf_loader_get_pixbuf (loader);
+	
+	if (!pixbuf) {
+		g_object_unref (loader);
+		g_set_error (error,
+					 GDK_PIXBUF_ERROR,
+					 GDK_PIXBUF_ERROR_FAILED,
+					 "Failed to load image '%s': reason not known, probably a corrupt image file",
+					 filename);
+		return NULL;
+	}
+	
+	g_object_ref (pixbuf);
+	
+	g_object_unref (loader);
+	
+	return pixbuf;
+}
+
 /* TODO 1: issue with affining alpha images - this is gdkpixbuf's fault...
  * TODO 2: issue with rotating images - do we want to rotate the whole
  *         canvas 2x to get this right, only to have #1 bite us?
@@ -1095,7 +1226,10 @@ rsvg_start_image (RsvgHandle *ctx, RsvgPropertyBag *atts)
 	if (!state->visible)
 		return;
 
-	img = gdk_pixbuf_new_from_file (href, &err);
+	w *= state->affine[0];
+	h *= state->affine[3];
+
+	img = rsvg_pixbuf_new_from_file_at_size (href, w, h, FALSE, &err);
 	
 	if (!img)
 		{
@@ -1106,28 +1240,26 @@ rsvg_start_image (RsvgHandle *ctx, RsvgPropertyBag *atts)
 				}
 			return;
 		}
-	
-	/* scale/resize the dest image */
-
-	art_affine_scale (tmp_affine, (double)w / (double)gdk_pixbuf_get_width (img),
-					  (double)h / (double)gdk_pixbuf_get_height (img));
-	art_affine_multiply (state->affine, tmp_affine, state->affine);
-	
-	w /= state->affine[0];
-	h /= state->affine[3];
 
 	has_alpha = gdk_pixbuf_get_has_alpha (img);
+
 	dest_rowstride = (int)(w * (has_alpha ? 4 : 3) + 3) & ~3;
 	rgb = g_new (guchar, h * dest_rowstride);
 	
+	/* we handle scaling above. we handle translation below. we don't handle rotation very well at all */
+	tmp_affine[0] = tmp_affine[3] = 1;
+	tmp_affine[4] = tmp_affine[5] = 0;
+	tmp_affine[1] = state->affine[1];
+	tmp_affine[2] = state->affine[2];
+
 	if(has_alpha)
 		art_rgb_rgba_affine (rgb, 0, 0, w, h, dest_rowstride,
 							 gdk_pixbuf_get_pixels (img),
 							 gdk_pixbuf_get_width (img),
 							 gdk_pixbuf_get_height (img),
 							 gdk_pixbuf_get_rowstride (img),
-							 state->affine,
-							 ART_FILTER_NEAREST,
+							 tmp_affine,
+							 ART_FILTER_BILINEAR,
 							 NULL);
 	else
 		art_rgb_affine (rgb, 0, 0, w, h, dest_rowstride,
@@ -1135,8 +1267,8 @@ rsvg_start_image (RsvgHandle *ctx, RsvgPropertyBag *atts)
 						gdk_pixbuf_get_width (img),
 						gdk_pixbuf_get_height (img),
 						gdk_pixbuf_get_rowstride (img),
-						state->affine,
-						ART_FILTER_NEAREST,
+						tmp_affine,
+						ART_FILTER_BILINEAR,
 						NULL);
 	
 	g_object_unref (G_OBJECT (img));
@@ -1151,10 +1283,10 @@ rsvg_start_image (RsvgHandle *ctx, RsvgPropertyBag *atts)
 	rsvg_push_discrete_layer(ctx);
 
 	gdk_pixbuf_copy_area (img, 0, 0,
-						  gdk_pixbuf_get_width (img) * state->affine[0],
-						  gdk_pixbuf_get_height (img) * state->affine[3],
+						  gdk_pixbuf_get_width (img),
+						  gdk_pixbuf_get_height (img),
 						  ctx->pixbuf, 
-						  state->affine[4] + x,
+						  state->affine[4] + x, /* translate */
 						  state->affine[5] + y);
 
 	rsvg_pop_discrete_layer(ctx);
